implement create invitation REST method, add Periodicity to requests and responses, add userStatusOnMeeting to requests and responses
